--- a/arch/x86_64/src/intel64/Kconfig
+++ b/arch/x86_64/src/intel64/Kconfig
@@ -195,4 +195,13 @@ config ARCH_INTEL64_DISABLE_INT_INIT
 		controllers. This is necessary if those are already
 		initialized, i.e. Jailhouse system.
 
+config ARCH_INTEL64_DISABLE_CET
+	bool "Disable CET completely"
+	---help---
+		Intel CET (Control-flow Enforcement Technology) is a hardware
+		enhancement aimed at mitigating the Retpoline vulnerability.
+		It inserts the endbr64 instruction at the beginning of functions,
+		which may impact CPU branch prediction performance.
+
+
 endif
